Added portion of landing page as requested in guidelines

--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="nav">
+            <h3 class="header-logo">Header Logo</h3>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+    </div>
+    <div class="section1">Test</div>
+    <div class="section2">Test</div>
+    <div class="section3">This is an inspiring quote</div>
+    <div class="section4">Test</div>
+    <div class="footer">Copyright</div>
 </body>
 </html>
