--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="header">
         <div class="nav">
@@ -20,10 +22,18 @@
             </ul>
         </div>
     </div>
-    <div class="section1">Test</div>
+    <div class="section1">
+        <div class="left">
+            <div class="big-text">This website is awesome</div>
+            <div class="small-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <button>Sign Up</button>
+        </div>
+        <div class="right">this is a placeholder for an image</div>
+    </div>
     <div class="section2">Test</div>
     <div class="section3">This is an inspiring quote</div>
     <div class="section4">Test</div>
     <div class="footer">Copyright</div>
 </body>
+
 </html>
