--- a/index.html
+++ b/index.html
@@ -25,15 +25,49 @@
     <div class="section1">
         <div class="left">
             <div class="big-text">This website is awesome</div>
-            <div class="small-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-            <button>Sign Up</button>
+            <div class="small-text">This website has some subtext that goes here under the main title. It's a smaller
+                font and the color is lower contrast</div>
+            <button class="sign-up">Sign Up</button>
         </div>
         <div class="right">this is a placeholder for an image</div>
     </div>
-    <div class="section2">Test</div>
-    <div class="section3">This is an inspiring quote</div>
-    <div class="section4">Test</div>
-    <div class="footer">Copyright</div>
+    <div class="section2">
+        <div class="information">Some random information.</div>
+        <div class="cards">
+            <div class="card">
+                <div class="image"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
+    <div class="section3">
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just
+            filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class="author">-Thor, God of Thunder</div>
+    </div>
+    <div class="section4">
+        <div class="bluebox">
+            <div class="action-text">
+                <div class="title">Call to Action! It's time!</div>
+                <div class="subtitle">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="action-button">Sign Up</button>
+        </div>
+    </div>
+    <div class="footer">Copyright &#169; The Odin Project 2021</div>
 </body>
 
 </html>
